# chatbot_ai_assistant_v2

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_2025-12-26.md  Dockerfile  README.md  arch_manual.md  claude.md  config.json  docker-compose.yml  drop_schema.sql  implementation_plan.md  main.py  migrate_to_uuid.sql  project_roadmap.md  pyproject.toml  requirements.txt  schema.sql  schemas.py  walkthrough.md  walkthrough_bugfix.md  walkthrough_sprint2.md
.agent/rules/: api-routers.md  config-setup.md  core-modules.md  langgraph-agents.md  logging-exceptions.md  models-repository.md  module-design.md  project-structure.md  service-layer.md  tools-layer.md  web-ui.md
.cursor/rules/: api-routers.mdc  config-setup.mdc  core-modules.mdc  logging-exceptions.mdc  models-repository.mdc  project-structure.mdc  service-layer.mdc
agent/: graph.py  state.py
api/: __init__.py  persona_router.py  qa_router.py  telegram_router.py  web_rag_router.py  web_router.py
core/: config.py  database.py  exceptions.py  graph.py  llm.py  logger.py  middleware.py  notion_client.py  security.py  vector_store.py
docs/: setup_environment.md  telegram_webhook_auto_setup.md
models/: __init__.py  chat_room_model.py  conversation_model.py  evaluation_model.py  knowledge_doc_model.py  persona_model.py  usage_model.py  user_model.py
repository/: chat_room_repository.py  conversation_repository.py  evaluation_repository.py  persona_repository.py  stats_repository.py  usage_repository.py  user_repository.py
scripts/: add_chat_room_summary.py  check_config.py  fix_telegram_id_bigint.sql  ingest_docs.py  reset_db.py  run_telegram_id_migration.py  telegram_webhook.py  test_multi_agent_manual.py  test_rag_ingest.py  test_supervisor_loop_fix.py  verify_concurrency.py  verify_db.py  verify_evaluation.py  verify_graph.py  verify_public.py  verify_token_stats.py  verify_token_tracking.py  verify_users_name.py  verify_web.py  verify_web_dashboard.py
services/: conversation_service.py  gemini_service.py  knowledge_service.py  retriever.py  streaming_helper.py  telegram_service.py
static/: style.css
templates/: admin_dashboard.html  base.html  dashboard.html  login.html  persona_detail.html  persona_edit.html  personas.html  rag_management.html  rag_select_room.html  user_dashboard.html
tests/: conftest.py  reproduce_issue.py  test_api.py  test_graph.py  test_memory.py  test_multi_agent.py  test_persona_api.py  test_rag.py  test_streaming.py  test_summarization.py  test_telegram_fixes.py  test_telegram_router.py  test_telegram_splitting.py  test_temporal_awareness.py  test_token_tracking.py  test_tools.py  test_tools_and_stream.py  test_web_router.py
tools/: memory_tool.py  retrieval_tool.py  search_tool.py  time_tool.py
(+13 files in other folders)
