[project]
name = "chatbot-ai-assistant-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.121.1",
    "greenlet>=3.2.4",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "langchain>=1.0.8",
    "langchain-google-genai>=3.1.0",
    "langgraph>=1.0.3",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
